--- a/css/style.css
+++ b/css/style.css
@@ -35,19 +35,19 @@ body, html {
   width: 40%;
 }
 
-.box1 {
+#box1 {
   background: rgba(255, 0, 0, .5);
 }
 
-.box2 {
+#box2 {
   background: rgba(0, 255, 0, .5);
 }
 
-.box3 {
+#box3 {
   background: rgba(0, 0, 255, .5);
 }
 
-.box4 {
+#box4 {
   background: rgba(255, 255, 0, .5);
 }
 
@@ -56,6 +56,9 @@ body, html {
 }
 
 .button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background: white;
   border-radius: 12px;
   height: 90%;
